# bach-or-bot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.hf  LICENSE  README.md  pyproject.toml  requirements.txt  try.py
.github/workflows/: ci.yml  hf.yml
app/: schemas.py  server.py  utils.py  validators.py
config/: data_config.yml  model_config.yml  server_config.yml
docs/: preprocessing.md
notebooks/exploratory/: musiclime.ipynb  spectttra-melspec-extraction.ipynb  spectttra-mock-clipping.ipynb  statistical-significance-test.ipynb
notebooks/inference/: Flask_Implementation.ipynb
notebooks/modeling/: Colab_Train.ipynb  MLP.ipynb
scripts/: evaluate.py  explain.py  explain_1.py  explain_combined_runner.py  explain_runner.py  explain_test.py  explain_with_json.py  flask.py  predict.py  predict_audio.py  predict_combined_runner.py  predict_lyrics.py  predict_runner.py  train.py  train_audio.py  train_lyrics.py  train_test.py
src/explainability/: __init__.py  explainer.py  musiclime.py  musiclime_wrapper.py  true_musiclime.py  utils.py  wrapper.py
src/explainability/factorization/: __init__.py  base.py  lyrics.py  source_separation.py  temporal.py
src/explainability/factorization_draft/: base.py  lyrics_factorization.py
src/explainability/lime/: base.py  explainer.py
src/explainability/lime_draft/: __init__.py  base.py  explainer.py  text_utils.py
src/llm2vectrain/: config.py  flask.py  llm2vec_trainer.py  model.py
src/models/: mlp.py
src/musiclime/: explainer.py  factorization.py  print_utils.py  text_utils.py  wrapper.py
src/preprocessing/: audio_preprocessor.py  lyrics_preprocessor.py  preprocessor.py
src/spectttra/: embedding.py  feature.py  spectttra.py  spectttra_trainer.py  tokenizer.py  transformer.py
src/utils/: config_loader.py  dataset.py
tests/: test_features.py  test_mlp.py  test_musiclime.py  test_spectttra.py
