[project]
name = "bach-or-bot"
version = "0.1.0"
description = "A binary classifier to distinguish between Human-composed and AI-generated music"
authors = [
    {name = "Acelle Krislette Rosales",email = "acellekrislette@gmail.com"},
    {name = "Hans Christian Queja",email = "hansqueja8@gmail.com"},
    {name = "Regina Bonfiacio",email = "bonifacioregina06@gmail.com"},
    {name = "Sean Matthew Sinalubong",email = "s3amatth3wsinalubong@gmail.com"},
    {name = "Syruz Ken Domingo",email = "syruzkenc.domingo@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "transformers (==4.44.2)",
    "llm2vec (>=0.2.3,<0.3.0)",
    "peft (>=0.17.1,<0.18.0)",
    "timm (>=1.0.19,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "openunmix (>=1.3.0,<2.0.0)",
    "scikit-learn (>=1.5.2)",
    "torchao" (==0.13.0),,
    "lime (>=0.2.0.1,<0.3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
