[project]
name = "bach-or-bot"
version = "0.1.0"
description = "A binary classifier to distinguish between Human-composed and AI-generated music"
authors = [
    {name = "Acelle Krislette Rosales",email = "acellekrislette@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "torch (==2.8.0)",
    "transformers (==4.44.2)",
    "llm2vec (==0.2.3)",
    "peft (>=0.17.1,<0.18.0)",
    "timm (>=1.0.19,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "torchao (>=0.13.0,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
